[tool.poetry]
name = "oop-project"
version = "0.1.0"
description = ""
authors = ["egor <scudf24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line_length = 119
exclude = '''
(
  /(
    \.git          # в корне проекта
  )/
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
